fix: Fixed the transcript not available for Agent type interview
- It also fix the caption not visible bug in agent type interview
- This fix also fix the feedback bug where all interviews got similar feedback due to prompt with empty feedback
- Bumped some dependency versions
- Cause of this bug is breaking change of `@vapi-ai/web` (refer changelog may 6, 2025) where clientMessages and serverMessages are sent in CreateAssistantDTO and the wrong typing mapped to object[][] instead of string[]

Fixes #2

--- a/app/globals.css
+++ b/app/globals.css
@@ -172,6 +172,10 @@
     @apply inline-block px-7 py-3 text-sm font-bold leading-5 text-white transition-colors duration-150 bg-destructive-100 border border-transparent rounded-full shadow-sm focus:outline-none focus:shadow-2xl active:bg-destructive-200 hover:bg-destructive-200 min-w-28;
   }
 
+  .btn-cancel {
+    @apply inline-block px-7 py-3 text-sm font-bold leading-5 text-white transition-colors duration-150 bg-destructive-100 border border-transparent rounded-full shadow-sm focus:outline-none focus:shadow-2xl active:bg-destructive-200 hover:bg-destructive-200 min-w-28;
+  }
+
   .btn-upload {
     @apply flex min-h-14 w-full items-center justify-center gap-1.5 rounded-md;
   }
